src/test/compile-fail/index_message.rs
// error-pattern:cannot index a value of type `()`
fn main() {
    let z = ();
    log(error, z[0]);
}
